第五次 修改后缀

--- a/aboutus.html
+++ b/aboutus.html
@@ -156,13 +156,13 @@
             <div class="nav">
                 <ul class="fix">
                     <li >
-                        <a href="index.htm" tppabs="http://www.4008506020.com/">
+                        <a href="index.html" tppabs="http://www.4008506020.com/">
                             <h4>首页</h4>
                             <span>Home</span>
                         </a>
                     </li>
                     <li>
-                        <a href="apartment.htm" tppabs="http://www.4008506020.com/apartment">
+                        <a href="apartment.html" tppabs="http://www.4008506020.com/apartment">
                             <h4>公寓</h4>
                             <span>Apartment</span>
                         </a>
@@ -180,13 +180,13 @@
                     <!--</a>-->
                     <!--</li>-->
                     <li>
-                        <a href="online.htm" tppabs="http://www.4008506020.com/online">
+                        <a href="online.html" tppabs="http://www.4008506020.com/online">
                             <h4>在线预订</h4>
                             <span>Community</span>
                         </a>
                     </li>
                     <li>
-                        <a href="aboutus.htm" tppabs="http://www.4008506020.com/aboutus">
+                        <a href="aboutus.html" tppabs="http://www.4008506020.com/aboutus">
                             <h4>关于我们</h4>
                             <span>About Us</span>
                         </a>
